--- a/templates/form.html
+++ b/templates/form.html
@@ -136,9 +136,6 @@
             padding: 0.75rem 1.5rem;
             font-weight: 500;
         }
-        .catalogo-select {
-            border-left: none;
-        }
         .input-group .form-floating {
             flex: 1;
         }
@@ -149,11 +146,10 @@
             border-top-left-radius: 0.375rem;
             border-bottom-left-radius: 0.375rem;
         }
-        .input-group .catalogo-select:not(:last-child) {
-            border-right: none;
-        }
         .input-group .btn-catalogo {
             border-left: none;
+            border-top-right-radius: 0.375rem;
+            border-bottom-right-radius: 0.375rem;
         }
         /* Responsive para móviles - mantener layout horizontal pero ajustar tamaños */
         @media (max-width: 768px) {
